<resources>
    <string name="app_name">Smart Khamari</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_your_number">Confirm your number</string>
    <string name="wrong_otp">You have entered wrong otp</string>
    <string name="send_another_otp_code">Send another otp code</string>
    <string name="otp_subtitle">We have send an otp to %1$s. \nNot your phone number? Change</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="sign_in">Sign In</string>
    <string name="do_not_have_account_sign_up">Do not have account? Sign Up</string>
    <string name="inalid_phone_number">Invalid phone number</string>
    <string name="name_cant_empty">Name can\'t be empty</string>
    <string name="oops">Oops!</string>
    <string name="something_went_wrong">Something went wrong. Make sure you have working network connection</string>
    <string name="welcome_to">Welcome to</string>
    <string name="add_new_cow">Add New Cow</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="add_new_sell">Add New Sell</string>
    <string name="total_customer">Total Customer</string>
    <string name="total_cows">Total Cows</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>