<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_big_extra"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_normal"
        android:text="@string/confirm_your_number"
        android:layout_marginTop="64dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/signUpSubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/margin_normal"
        app:layout_constraintTop_toBottomOf="@+id/signUpTitle" />


    <com.poovam.pinedittextfield.LinePinField
        android:id="@+id/otpView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppComponent.Body2"
        android:textSelectHandle="@drawable/text_handle"
        app:bottomTextPaddingDp="3dp"
        app:distanceInBetween="10dp"
        app:highlightColor="@color/color_on_surface_alpha_50"
        app:highlightType="allFields"
        app:isCursorEnabled="false"
        app:isCustomBackground="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpSubTitle"
        app:lineThickness="1dp"
        app:noOfFields="4" />

    <TextView
        android:id="@+id/wrongOtpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong_otp"
        android:textAppearance="@style/TextAppearance.AppComponent.Caption"
        android:textColor="?attr/colorError"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpView" />


    <TextView
        android:id="@+id/resendOtpTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/send_another_otp_code"
        android:textAppearance="@style/TextAppearance.AppComponent.Headline7"
        android:textColor="?attr/colorPrimary"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wrongOtpTxt" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="@dimen/margin_big_extra"
        android:text="@string/sign_up"
        android:visibility="gone"
        android:layout_marginHorizontal="@dimen/margin_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resendOtpTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>