<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/sideNavIcon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="@dimen/margin_normal"
        android:layout_marginTop="@dimen/margin_big"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sidenav_icon" />

    <ImageView
        android:id="@+id/notificationIcon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginEnd="@dimen/margin_normal"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/sideNavIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sideNavIcon"
        app:srcCompat="@drawable/notification" />

    <ImageView
        android:id="@+id/reportIcon"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginEnd="@dimen/margin_normal"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="@+id/sideNavIcon"
        app:layout_constraintEnd_toStartOf="@id/notificationIcon"
        app:layout_constraintTop_toTopOf="@id/sideNavIcon"
        app:srcCompat="@drawable/report" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sideNavIcon">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="100dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/welcomeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_big_extra"
                android:text="@string/welcome_to"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:text="@string/welcome_to"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeTxt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newCowBtn"
                style="@style/Widget.AppComponent.HomeButton"
                android:layout_marginTop="@dimen/margin_big"
                android:text="@string/add_new_cow"
                app:icon="@drawable/cow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTxt" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newCustomerBtn"
                style="@style/Widget.AppComponent.HomeButton"
                android:text="@string/add_new_customer"
                app:icon="@drawable/customer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newCowBtn" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newSellBtn"
                style="@style/Widget.AppComponent.HomeButton"
                android:text="@string/add_new_sell"
                app:icon="@drawable/coin_colored"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newCustomerBtn" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cowCard"
                android:layout_width="0dp"
                android:layout_height="@dimen/home_card_height"
                android:layout_marginHorizontal="@dimen/margin_normal"
                android:layout_marginVertical="@dimen/margin_normal"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/customerCard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newSellBtn">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cowLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/cowImage"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:contentDescription="@string/app_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/cow" />

                    <TextView
                        android:id="@+id/cowNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="666"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                        android:textColor="@color/green"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/cowTitle"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/cowTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_cows"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/customerCard"
                android:layout_width="0dp"
                android:layout_height="@dimen/home_card_height"
                android:layout_marginHorizontal="@dimen/margin_normal"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/cowCard"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cowCard"
                app:layout_constraintTop_toTopOf="@+id/cowCard">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/customerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">

                    <ImageView
                        android:id="@+id/customerImage"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:contentDescription="@string/app_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/customer" />

                    <TextView
                        android:id="@+id/customerNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="666"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                        android:textColor="@color/blue"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/customerTitle"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/customerTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_customer"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>